--- a/transcriptions/16r.md
+++ b/transcriptions/16r.md
@@ -6,39 +6,39 @@ date: June 2018
 - [X] Transcribed
 - [ ] Double checked
 
-And þer with al he bleynt and crẏed a  
+And þer with al he bleynt and cryed a  
 As þough he stongen were unto þe herte  
-And with þat crẏe Arcite anon up sterte  
-And seide Cosyn myn what eẏleþ þe  
+And with þat crye Arcite anon up sterte  
+And seide Cosyn myn what eyleþ þe  
 That art so pale and dedly on to se  
-Whẏ crẏdestow who haþ þe don offence  
+Why crydestow who haþ þe don offence  
 ﬀor goddes love tak al in pacience  
-Oure p̉soun for it maẏ non oþer be  
-ﬀortune haþ ẏiue us þis aduersite  
+Oure p̉soun for it may non oþer be  
+ﬀortune haþ yiue us þis aduersite  
 Som wicke aspect or disposiciōn̄  
-Of Saturne bẏ som constellaciōn̄  
+Of Saturne by som constellaciōn̄  
 Haþ ȝiuen vs þis al þough we had it sworn  
 So stood þe heuen whan þat we ware born  
-We mote endure it þis is schort and plaẏn  
+We mote endure it þis is schort and playn  
 This Palamon answerd and seide again  
 Cosyn for soþe of þis opynion  
 Þou hast a vain imaginacion  
 This p̉son̄ causede me nought to crie    
-But I was hurt right now þorugħ out myn ẏhe    
-In to myn hert þat wol mẏ bane be  
-The faẏrnesse of þat ladẏ þat I see  
-Ȝonde in the gardẏn rome to and fro  
-Is cause of al mẏ crẏing and mẏ wo  
+But I was hurt right now þorugh out myn yhe    
+In to myn hert þat wol my bane be  
+The fayrnesse of þat lady þat I see  
+Ȝonde in the gardyn rome to and fro  
+Is cause of al my crying and my wo  
 I not wher sche be wōman or goddesse  
-But Venus is it sothlẏ as I gesse  
+But Venus is it sothly as I gesse  
 And þer with al on knees a doun he fille    
-And seyde Venus if it be þẏ wille  
-ẏow in þis gardeyn þus to tñsfigure  
-Bẏfore me sorwful wrecched creature  
+And seyde Venus if it be þy wille  
+yow in þis gardeyn þus to tñsfigure  
+Byfore me sorwful wrecched creature  
 Out of þis prison̄ help þat we mowe scape  
-And if so be mẏ destenẏe be schape  
-Bẏ eterne world to deẏen in p̉son̄  
+And if so be my destenye be schape  
+By eterne world to deyen in p̉son̄  
 Of oure lynage haue som compassion̄  
-That is so lowe ẏ brougħt bẏ tyrannie  
-And with þat word Arcite gan aspẏe  
-Wher as þis ladẏ romed to and fro  
+That is so lowe y brought by tyrannie  
+And with þat word Arcite gan aspye  
+Wher as þis lady romed to and fro  
