--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -6,9 +6,9 @@ date: June 2018
 - [x] Transcribed
 - [ ] Double checked
 
-That in his hous is of his meẏne slain  
+That in his hous is of his meyne slain  
 Infinite harmes ben in þis matiere  
-We wot not what þing þat we preẏen heere  
+We wot not what þing þat we preyen heere  
 We faren as he þat dronken is as Mous  
 A dronke man wot wel he haþ an hous  
 But he not which þe righte weie is þider  
@@ -16,29 +16,29 @@ And to a dronke man þe weye is slider
 And certes in þis world so faren we  
 We seeken fast after felicite  
 But we gon wrong ful ofte trewely  
-Thus may we seẏn aỻ and namlich I  
-That wende and hadde a gret opẏnion̄  
+Thus may we seyn all and namlich I  
+That wende and hadde a gret opynion̄  
 That if I might skapen fro p̉son̄  
-Than hadde I ben in joẏe and ꝑfyt hele  
-Ther now I am exiled fro mẏ wele  
-Syn þat I maẏ not seen ȝou Emelye  
-I am but ded þer nẏs no remedẏe  
+Than hadde I ben in joye and ꝑfyt hele  
+Ther now I am exiled fro my wele  
+Syn þat I may not seen ȝou Emelye  
+I am but ded þer nys no remedye  
 vpon þat oþer syde Palamon  
 Whan þat he wiste þat Arcite was gon   
 Swich sorwe he makeþ þat þe grete tour  
 Resouneþ of his yollyng and clamour   
-The pure fettres of his schẏnes grete   
+The pure fettres of his schynes grete   
 Were of his bittre salte teeres wete  
 Allas qd he arcita cosy myn  
-Of aỻ our strif god wot þe fruẏt is þin  
+Of all our strif god wot þe fruyt is þin  
 Thou walkest now in Thebes at þi large  
-And of mẏ woo þou ẏernest litel charge  
+And of my woo þou yernest litel charge  
 Thou maist syn þou hast wisdom and manhede  
-Assemble aỻ þe folk of oure kinrede  
+Assemble all þe folk of oure kinrede  
 And make a werre so scharp on þis Cite  
-That bẏ som auenture or som tretee  
-Thou maist haue hir to ladẏ and to wif  
-ﬀor whom þat I most needes leese mẏ lif  
-ﬀor as bẏ weie of possibilite  
+That by som auenture or som tretee  
+Thou maist haue hir to lady and to wif  
+ﬀor whom þat I most needes leese my lif  
+ﬀor as by weie of possibilite  
 Sitthe þou art at þi large of prison̄ fre  
 And art a lord gret is þin auantage  
