--- a/transcriptions/21v.md
+++ b/transcriptions/21v.md
@@ -8,37 +8,37 @@ author: Jenna Schoen
 - [ ] Double checked
 
 The gailler sleep he might not awake  
-And þus he fleeth as fast as euer he maẏ  
-The night was schort and faste bẏ þe daẏ  
+And þus he fleeth as fast as euer he may  
+The night was schort and faste by þe day  
 That needes cost he most himseluen hyde  
 And til a groue faste þer bisyde  
 With dredful foot þan stalkeþ Palamon  
 ﬀor schortly þis was his opinion  
-That in þat groue he wolde him hide aldaẏ  
+That in þat groue he wolde him hide alday  
 And in þe night þan woled he take his way  
-To Thebes ward his frendes for to praẏ  
+To Thebes ward his frendes for to pray  
 And schortly ouþer he wolde leese his lif  
 Or wynnen Emely to his louely wif  
 This is þeffecte and his entente playn  
 ¶ Now wol I torne vnto arcite agayn  
 That litel wiste how neih þat was his care  
 Til þat fortune hadde kaught him in his snare   
-The besy larke messanger of daẏ  
-Salueth in hir song þe morwe graẏ  
-And fyrẏ phebus riseþ vp so bright  
+The besy larke messanger of day  
+Salueth in hir song þe morwe gray  
+And fyry phebus riseþ vp so bright  
 That al þe orient laugheth of þe light  
 And with his streemes drieth in þe greues  
-The seluir dropes hangẏng in þe leeues  
+The seluir dropes hangyng in þe leeues  
 And Arcita in þe court roial  
 Wiþ Theseus his squier principal  
-Is rẏsen and lokeþ on þe merẏ daẏ  
-Out for to doon his obẜuance to maẏ  
-Remembrẏng on þe poynt of his desir  
+Is rysen and lokeþ on þe mery day  
+Out for to doon his obẜuance to may  
+Remembryng on þe poynt of his desir  
 He on his courser stertyng as þe fir  
-Is ryden in to þe feeldes him to pleẏe  
-Out of þe court were it a mẏle or tweẏe  
+Is ryden in to þe feeldes him to pleye  
+Out of þe court were it a myle or tweye  
 And to þe groue of which þat I ȝou tolde  
-Bẏ auenture his weẏe he gan to holde  
+By auenture his weye he gan to holde  
 To maken him a garland of þe greues  
-Were it of woodebẏnde or hawethorne leeues  
+Were it of woodebynde or hawethorne leeues  
 And loude he song aȝein þe sonne scheene  
