--- a/transcriptions/22v.md
+++ b/transcriptions/22v.md
@@ -12,34 +12,34 @@ Of Cadmus which þat was þe ferste man
 That Thebes bult or ferst þe toun bigan  
 And of þe cite first was crouned king  
 Of his lynage am I and his ofspring  
-Bẏ verraẏ ligne as of þe stok roiaỻ  
-And now I am so caytif and so praỻ  
-That he þat is mẏ mortel enemẏ  
-I serue him as his squier pouerlẏ  
+By verray ligne as of þe stok roiall  
+And now I am so caytif and so prall  
+That he þat is my mortel enemy  
+I serue him as his squier pouerly  
 And ȝit doþ me Iuno wel more schame  
 ﬀor I dar nought biknowe myn owene name  
 but þer as I was wont to hight arcite  
-Now highte I Philostrate nought worþ a mẏte  
+Now highte I Philostrate nought worþ a myte  
 Allas þou felle mars allas þou Juno  
-Thus haþ ẏour ire oure lignage al fordo  
-Gaf onlẏ me and wrecched Palamon  
+Thus haþ your ire oure lignage al fordo  
+Gaf only me and wrecched Palamon  
 That Theseus martireþ in prison̄  
-And ouer al þis to slen me vtterlẏ  
+And ouer al þis to slen me vtterly  
 loue haþ his faire dart so brennyngly.  
-ẏ stiked þurgh mẏ trewe carful herte  
-That schapen was mẏ deþ arst þan mẏ scherte  
-ẏe sleen me with ȝour eyȝen emelye  
-ȝe ben þe cause wher fore þat I dẏe  
-Of aỻ þe remanant of mẏn oþer care  
+y stiked þurgh my trewe carful herte  
+That schapen was my deþ arst þan my scherte  
+ye sleen me with ȝour eyȝen emelye  
+ȝe ben þe cause wher fore þat I dye  
+Of all þe remanant of myn oþer care  
 Ne sette I nought þe montance of a tare  
 So þat I cowde don aught to ȝoure plesance  
 And with þat word he fel doun in a traunce  
-A long tẏme and aftirward he vpsterte  
+A long tyme and aftirward he vpsterte  
 This Palamon þat þought þat þorugh his herte   
 He felte a cold swerd sodeinliche glyde  
-ﬀor yre he quok no lenger wolde he bẏde  
+ﬀor yre he quok no lenger wolde he byde  
 And whan þat he had herd Arcites tale  
 As he were wood with face deed and pale  
 he sterte him vp out of þe buskes þikke  
-And seide arcite false traẏtour wikke  
-Now art þou hent þat louest mẏ ladẏ so  
+And seide arcite false traytour wikke  
+Now art þou hent þat louest my lady so  
