--- a/transcriptions/25r.md
+++ b/transcriptions/25r.md
@@ -9,37 +9,37 @@ author: G. E. Saretto
 
 ﬀor which he haþ deserued to be ded  
 ﬀor þis is he þat com vnto þi gate  
-And seẏde þat he highte Philostrate  
-Thus haþ he Iaped þe ful manẏ a ȝeere  
+And seyde þat he highte Philostrate  
+Thus haþ he Iaped þe ful many a ȝeere  
 And þou hast maked him þi cheef squiere  
-And þis is he þat loueþ Emelẏe  
-ﬀor siþ þat daẏ is come þat I schal dẏe  
-I make pleẏnly mẏ confession̄  
+And þis is he þat loueþ Emelye  
+ﬀor siþ þat day is come þat I schal dye  
+I make pleynly my confession̄  
 That I am þilke woful Palamon  
 þat haþ þi p̉son̄ broke wikkedely  
 I am þi mortel foo ⁊ am I  
 That loueþ so hote Emelya þe brighe  
-That I wol dẏe p̔sent in hir sighte  
+That I wol dye p̔sent in hir sighte  
 Wher fore I axe deþ and my Iuwise  
-But sle mẏ felawe in þe same wise  
-ﬀor boþe haue we deserued to be slaẏn  
+But sle my felawe in þe same wise  
+ﬀor boþe haue we deserued to be slayn  
 ¶ This worþi duk answerde anon agayn  
 And seide þis is a schort conclusioun  
-ẏour owne mouþ be ȝoure confession̄  
+your owne mouþ be ȝoure confession̄  
 Haþ dampned ȝou and I wol it recorde  
-It needeþ nought to pẏne ȝou with þe corde  
-ye schal be ded bẏ mightẏ mars þe reede  
-The queen anon for verreẏ wōmanhede  
+It needeþ nought to pyne ȝou with þe corde  
+ye schal be ded by mighty mars þe reede  
+The queen anon for verrey wōmanhede  
 Com for to wepe and so dide Emelye  
-And aỻ þe ladies of þe compaignẏe  
-Gret pite was it as it þougħt hem aỻ
+And all þe ladies of þe compaignye  
+Gret pite was it as it þought hem all
 That euer such a chaunce schulde falle  
 ﬀor gentil men þei were of gret estat  
 And noþing but for loue was þis debat  
-And saugħ hire bloodẏ woundes wide and sore  
-And aỻ crẏeden boþe lasse and more  
-Haue mercẏ lord vpon vs wōmen aỻ  
-And on here bare knees doun þei faỻ  
+And saugh hire bloody woundes wide and sore  
+And all cryeden boþe lasse and more  
+Haue mercy lord vpon vs wōmen all  
+And on here bare knees doun þei fall  
 And wolde haue kist his feet þer as he stood  
 Til atte laste aslaked was his mood  
 ﬀor pite renneþ sone in gentil herte  
