--- a/transcriptions/26r.md
+++ b/transcriptions/26r.md
@@ -8,38 +8,38 @@ author: G. E. Saretto
 - [ ] Double checked
 
 Now lokeþ is not þat an heih folye  
-¶ Who maẏ ben a fool but if he loue  
-Bẏhold for goddes sake þat fitteþ aboue  
-See how þai bleede be þai not wel arraẏed  
-Thus haþ hire lord þe god of loue ẏ paiȝed  
+¶ Who may ben a fool but if he loue  
+Byhold for goddes sake þat fitteþ aboue  
+See how þai bleede be þai not wel arrayed  
+Thus haþ hire lord þe god of loue y paiȝed  
 Hire wages and hire fees for hire seruise  
 And ȝit þei wenen for to ben ful wise  
-That seruen loue for aught þat maẏ bifaỻ  
-But þis is ȝet þe beste game of aỻ  
+That seruen loue for aught þat may bifall  
+But þis is ȝet þe beste game of all  
 That sche for wham þei haue þis iolyte  
 Can hem þerfore as moche þank as me  
-Sche woot na more of aỻ þis hoote fare  
-Bẏ god þan woot a Cockow of an hare  
-But al moot ben assaẏed hoot and colde  
+Sche woot na more of all þis hoote fare  
+By god þan woot a Cockow of an hare  
+But al moot ben assayed hoot and colde  
 A man moot ben a fool or ȝong or olde  
-I wot it bẏ mẏ self ful ẏore agon  
-ﬀor in mẏ tyme a seruant was I on  
-And þerfore sẏn I knowe of loues peẏne  
-And woot how sore it can a man distreẏne  
+I wot it by my self ful yore agon  
+ﬀor in my tyme a seruant was I on  
+And þerfore syn I knowe of loues peyne  
+And woot how sore it can a man distreyne  
 As he þat hath ben caught often in his laas  
-I you forȝiue al hollẏ þis trespas  
+I you forȝiue al holly þis trespas  
 At þe requeste of þe queen þat kneeleþ heere  
 And eek of Emelye my soster deere  
 And ȝe schal boþe anon vnto me swere  
-That neuere ȝe schal mẏ coroune dere  
-Ne make werre vpon me night ne daẏ  
-But ben mẏ frendes in aỻ þat ȝe may  
-I ȝou forȝiue þis trespas eủẏ del  
-And þeẏ him sworen his axing fair and wel  
+That neuere ȝe schal my coroune dere  
+Ne make werre vpon me night ne day  
+But ben my frendes in all þat ȝe may  
+I ȝou forȝiue þis trespas eủy del  
+And þey him sworen his axing fair and wel  
 And him of lordschipe and of mercy preide  
 And he hem g̃unteþ grace and þus he seide  
-To speke of riaỻ lynage and richesse  
+To speke of riall lynage and richesse  
 þough þat sche were a queen or a princesse  
-Ech of ȝou boþe is worþẏ douteles  
+Ech of ȝou boþe is worþy douteles  
 To wedde whan tyme is but naþeles  
-I speke as for mẏ suster Emelye  
+I speke as for my suster Emelye  
