--- a/transcriptions/26v.md
+++ b/transcriptions/26v.md
@@ -7,38 +7,38 @@ author: Jenna Schoen
 - [ ] Double checked
 
 ﬀor whom ȝe haue þis strif and Ialousie  
-Ȝe wite ȝoure self sche maẏ not wedde tuo  
+Ȝe wite ȝoure self sche may not wedde tuo  
 At oones þough ȝe fighten eủemo  
 That oon of ȝou al be him loþ or leef  
-He moot go pẏpen in an ẏuẏ leef  
-This is to seẏ sche maẏ not haue boþe  
+He moot go pypen in an yuy leef  
+This is to sey sche may not haue boþe  
 Al be ȝe neuer so Ialouse ne so wroþe  
 And for þi I ȝou putte in þis degre  
 That ech of ȝou schal haue his destine  
 As him is schape and herkneþ in what wise  
-Lo heer ȝour ende of þat I schal deuẏse  
-¶ Mẏ wil is þis for plat conclusion̄  
-Wiþouten enẏ replicacion̄  
+Lo heer ȝour ende of þat I schal deuyse  
+¶ My wil is þis for plat conclusion̄  
+Wiþouten eny replicacion̄  
 If þat ȝow likeþ takeþ it for þe beste  
-That eủẏch of ȝou schal gon wher him leste  
-ﬀrelẏ wiþouten Raunceon or daunger  
-And þis daẏ fiftẏ wẏkes fer ne neer  
+That eủych of ȝou schal gon wher him leste  
+ﬀrely wiþouten Raunceon or daunger  
+And þis day fifty wykes fer ne neer  
 Euerich of ȝou schal bringe an hundred knightes  
-Armed for þe lẏstes vp al rightes  
-Al redẏ to darreẏne hir bẏ bataile  
+Armed for þe lystes vp al rightes  
+Al redy to darreyne hir by bataile  
 And þis biheete I ȝou wiþoute faile  
-vpon mẏ trouþe and as I am a knight  
+vpon my trouþe and as I am a knight  
 That wheþer of ȝou boþe þat haþ might  
 This is to sein þat wheþer he or þou  
-Maẏ with his hundred as I spak of now  
-Sle his contrarie or out of lystes drẏue  
+May with his hundred as I spak of now  
+Sle his contrarie or out of lystes dryue  
 That schal I ȝive Emelya to wyue  
 To whom þat fortune ȝeueþ so fair a grace  
 The lystes schal I maken in þis place  
-And god so wisly on mẏ soule rewe  
+And god so wisly on my soule rewe  
 As I schal euen Iugge ben and trewe  
 ȝe schal non oþer eende wiþ me maken  
 þat on of ȝou ne schal ben deed or taken  
-And if ȝou þinkeþ þis is wel ẏ saẏed  
-Seẏ ȝour avẏs and holdeþ ȝou appaied  
+And if ȝou þinkeþ þis is wel y sayed  
+Sey ȝour avys and holdeþ ȝou appaied  
 This is ȝour ende and ȝour conclusion̄    
