--- a/transcriptions/27r.md
+++ b/transcriptions/27r.md
@@ -7,38 +7,38 @@ author: G. E. Saretto
 - [x] Transcribed
 - [ ] Double checked
 
-Who lokeþ lightlẏ now but Palamon̄  
-Who springeþ vp for ioẏe but arcite  
+Who lokeþ lightly now but Palamon̄  
+Who springeþ vp for ioye but arcite  
 Who couþe telle or who couþe it endite  
-The ioẏe þat is maked in þe place  
+The ioye þat is maked in þe place  
 Whan Theseus haþ don so fair a grace  
-But doun on knees went euerẏ maner wight  
-And þonked him wiþ aỻ here hert and might  
-And namelẏ þe Tebanes ofte siþe  
+But doun on knees went euery maner wight  
+And þonked him wiþ all here hert and might  
+And namely þe Tebanes ofte siþe  
 And þus wiþ good hope and wiþ herte bliþe  
-Theẏ take þeir leue and homward gon þei ride  
+They take þeir leue and homward gon þei ride  
 To Thebes with olde walles wyde  
 I trowe men wold it deme necligence  
-ẏf I forȝete te tellen þe dispense  
+yf I forȝete te tellen þe dispense  
 Of Theseus þat goþ so busily  
-To maken vp þe lystes rẏally  
+To maken vp þe lystes ryally  
 That such a noble theatre as it was  
-I dar wel seẏn in þe world þer nas  
+I dar wel seyn in þe world þer nas  
 The|circuite a Mile was aboute  
 Walled of stoon and diched al wiþoute  
 Round was þe schap in maner of compas  
-ﬀul of degrees þe heighte of sixtẏ paas  
+ﬀul of degrees þe heighte of sixty paas  
 Than whan a man was sette on oo degre  
 he lettede nought his felawe for to see  
 Estward þer stood a gate of marbel white  
 Westward right south anoþer in opposite  
 And schortly to conclude such a place  
 Was non in erþe as in so litel a space  
-ﬀor in þe lond þer nas no craftẏ man  
+ﬀor in þe lond þer nas no crafty man  
 That Geometrie or ars metrike can  
-Ne purtreiour ne keruer of ẏmages  
+Ne purtreiour ne keruer of ymages  
 That Theseus ne gain him mete ⁊ wages  
-The Teatre for to make and deuẏse  
+The Teatre for to make and deuyse  
 And for to don his rite and sacrifise  
 he estward haþ vpon þe gate aboue  
 In worschip of venus þe goddesse of loue  
