--- a/transcriptions/29r.md
+++ b/transcriptions/29r.md
@@ -7,39 +7,39 @@ author: G. E. Saretto
 - [x] Transcribed
 - [ ] Double checked
 
-A þousand ẏ slaẏn and nougħt of qualme ẏ storue  
-The Tiraunt with his preẏe his force thraste  
+A þousand y slayn and nought of qualme y storue  
+The Tiraunt with his preye his force thraste  
 The toun destroied þer was noþing laste  
 yet saugh I brent þe schippes hoppestereres  
 The hunte strangled wiþ þe wilde breeres  
 The sowe freten þe child right in þe cradel  
 The cook I scalded for al his longe ladel  
-Nought was forgeten bẏ þe infortune of marte  
+Nought was forgeten by þe infortune of marte  
 The carter ouer Riden wiþ his carte  
-vnder þe wheel ful lowe he laẏ a doun  
+vnder þe wheel ful lowe he lay a doun  
 Ther were also of martis diuision̄  
 The barbour and þe bocher and þe smith  
 That forgeþ scharpe swerdes on his stith  
-And aỻ aboue depeẏnted in a toure  
+And all aboue depeynted in a toure  
 Saugh I conqueste in gret honoure  
 With þe scharpe swerd ouer his heed  
-Hangẏnge bẏ a subtyl twẏned þreed  
+Hangynge by a subtyl twyned þreed  
 Depeynted was þe slaughtre of Iulius  
 Of grete Nero and of Anthonius  
 Al be þat ilke time þei were vnborn  
 ȝet was hire deth depeynted þer biforn  
-Bẏ manasẏng of mars right bẏ figure  
+By manasyng of mars right by figure  
 So was it schewed in þat purtreiture  
-As is depeẏnted in þe sertres aboue  
+As is depeynted in þe sertres aboue  
 Who schal be slain or elles deed for loue  
 Sufficeþ oon ensample in stories olde  
-I maẏ not rekne hem aỻ þougħ I wolde  
+I may not rekne hem all þough I wolde  
 The statue of mars vpon a carte stood  
-Armed and loked grẏm as he were wood  
+Armed and loked grym as he were wood  
 And ouer his heed þer schineþ tuo figures  
 Of sterres þat ben closed in scriptures  
 That oon Puella þat oþer Rubeus  
-This god of armes was arraẏed þus  
+This god of armes was arrayed þus  
 A wolf þer stood biforn him at his feete  
 Wiþ eighen reede and of a man he eete  
-Wiþ subtiỻ penseỻ was depeynted þis storie  
+Wiþ subtill pensell was depeynted þis storie  
