--- a/transcriptions/29v.md
+++ b/transcriptions/29v.md
@@ -6,12 +6,12 @@ author: Jenna Schoen
 - [X] Transcribed
 - [ ] Double checked
 
-In redoutẏng of mars and of his glorie  
+In redoutyng of mars and of his glorie  
 Now to þe temple of Diane þe chaste  
 As schortly as I can I wol me haste  
-To telle ȝou aỻ þe discripcion̄  
-Depeẏnted ben þe walles vp and don̄  
-Of huntẏng and of schamefast chastite  
+To telle ȝou all þe discripcion̄  
+Depeynted ben þe walles vp and don̄  
+Of huntyng and of schamefast chastite  
 Ther saugh I how woful Calistope  
 Whan þat Diane agreued was with here  
 Was torned fro a wom̄an til a bere  
@@ -20,23 +20,23 @@ Hire sone is eek a sterre as men may se
 Ther saugh I dane torned til a tree  
 I mene nat þe goddesse Diane  
 But Penneus doughter which þat hight Dane  
-¶ Ther saugh I accheon an herte ẏ maked  
+¶ Ther saugh I accheon an herte y maked  
 ﬀor vengance þat he saugh Diane al naked  
 I saugh how þat his houndes haue him caught  
 and freten him for þat þei knewe him naught  
-ẏet ẏpeynted was a litel forþere more  
+yet ypeynted was a litel forþere more  
 how atthalance hounted þe wilde bore  
-And Meliagre and manẏ anoþer mo  
+And Meliagre and many anoþer mo  
 ﬀor which Diane wrought him care and wo  
-Ther saugh I manẏ anoþer wonder storie  
+Ther saugh I many anoþer wonder storie  
 The which me list nat drawe to memorie  
 ¶ This goddess on an hert ful wel hiegh seet  
-Wiþ smale honndes aỻ aboute hir feet  
+Wiþ smale honndes all aboute hir feet  
 And vnder neþe hire feet sche hadde a moone  
-Wexẏnge it was and schulde wanẏe soone  
+Wexynge it was and schulde wanye soone  
 In gaude greene hir statue cloþed was  
-hir eẏhen caste sche ful lowe a doun  
+hir eyhen caste sche ful lowe a doun  
 Ther Pluto haþ his derke regioun  
-A wōman trauaillẏnge was hire biforn  
+A wōman trauaillynge was hire biforn  
 But for hire childe so longe was vnborn  
-ﬀul pitoulẏ lucẏna gan sche calle  
+ﬀul pitouly lucyna gan sche calle  
