--- a/transcriptions/30v.md
+++ b/transcriptions/30v.md
@@ -9,35 +9,35 @@ author: Jenna Schoen
 And som wil haue a pruce scheld or a targe  
 Som wol ben armed on his legges wel  
 and haue an axe and som a mace of steel  
-Ther nẏs no newe gẏse þat it nas olde  
+Ther nys no newe gyse þat it nas olde  
 Armed were þei as I haue ȝou tolde  
-Euerich after his opẏnioun  
-Ther maystow see comẏng wiþ Palamon̄  
+Euerich after his opynioun  
+Ther maystow see comyng wiþ Palamon̄  
 ligurge himself þe grete king of trace  
-Blak was his berd and manlẏ was his face  
-The cercles of his ẏhen in his heede  
+Blak was his berd and manly was his face  
+The cercles of his yhen in his heede  
 Thei gloweden bitwixe yelow and rede  
 And lik a griffon̄ loked he aboute  
 With kempe heres on his browes stoute  
-his lẏmes grete his braunes harde and strong  
+his lymes grete his braunes harde and strong  
 his schuldernes brode his armes round and long  
 And as þe gyse was in his cuntre  
 ﬀul heighe vpon a chaar of gold stood he  
 Wiþ foure white boles in þe trays  
-In stede of cote armour ouer his harnaẏs  
-Wiþ naẏles ẏelowe and bright as enẏ golde  
-he hadde a berskẏnne coleblak for olde  
-his longe her was kembed bẏhynde his bak  
-As enẏ rauenes feþer it schon for blak  
+In stede of cote armour ouer his harnays  
+Wiþ nayles yelowe and bright as eny golde  
+he hadde a berskynne coleblak for olde  
+his longe her was kembed byhynde his bak  
+As eny rauenes feþer it schon for blak  
 A wreþe of gold arme gret of huge weight  
 vpon his heed sette ful of stones bright  
 Of fyne Rubies and of Diamantz  
 Aboute hs chaar þer wente wit Alantz  
-Twentẏ and mo as gret as enẏ steere  
+Twenty and mo as gret as eny steere  
 To hunten atte leon̄ or þe deere  
-And folwed him with mosel fast ẏ bounde  
+And folwed him with mosel fast y bounde  
 Coleres of gold and torettes filed rounde  
 And C. lordes haddes he in his route  
 Armed ful wel wiþ hertes sterne and stoute  
 ¶ Wiþ arcita in stories as men fynde  
-vpon a steede baẏ trapped in steel  
+vpon a steede bay trapped in steel  
