--- a/transcriptions/33r.md
+++ b/transcriptions/33r.md
@@ -8,38 +8,38 @@ author: G. E. Saretto
 - [ ] Double checked
 
 As keepe me fro þi vengance and þin Ire  
-That attheon aboughte cruellẏ  
+That attheon aboughte cruelly  
 Chaste goddesse wel wost þou þat I  
-Desyre to ben a maẏde aỻ mẏ lif  
+Desyre to ben a mayde all my lif  
 Ne neuer wol I be no loue ne wijf  
-I am þou wost ȝit of þẏ compaignie  
-A maiden and loue huntẏng and venerie  
+I am þou wost ȝit of þy compaignie  
+A maiden and loue huntyng and venerie  
 And for to walken in the woodes wilde  
 And nought to ben a wijf and be wiþ childe  
 Nought wol I knowe compaignie of man  
-Now helpe me ladẏ siþþe ȝe maẏ and can  
+Now helpe me lady siþþe ȝe may and can  
 ﬀor þe þre formes þat þou hast in the  
 And Palamon þat haþ swich loue to me  
 And eek arcite þat loueþ me so sore  
-This grace I preẏe ȝow wiþoute more  
+This grace I preye ȝow wiþoute more  
 And sende loue and pees bitwixe hem tuo  
-And fro me torne aweẏ here hertes so  
-That aỻ here hoote loue and here desire  
-And aỻ here besy torment and here fire  
-Be queẏnt or torned in anoþer place  
+And fro me torne awey here hertes so  
+That all here hoote loue and here desire  
+And all here besy torment and here fire  
+Be queynt or torned in anoþer place  
 And if so be þou wolt not do me g̃ce  
-Or if mẏ destẏne be schape so  
+Or if my destyne be schape so  
 That I schal needes haue oon of hem tuo  
 As sende me him that most desireth me  
 Biholde goddesse of clene chastite  
-The bittre teeres þat on mẏ cheekes falle  
-Syn þou art maiden and keꝑe of vs aỻ  
-Mẏ maẏdenhode þou kepe and wel conserue  
+The bittre teeres þat on my cheekes falle  
+Syn þou art maiden and keꝑe of vs all  
+My maydenhode þou kepe and wel conserue  
 And whil I lyue a maide I wol ȝou serue  
 ¶ The fires brennen vpo þe auter cleer  
-Whil Emelye was þus in hire preẏer  
-But sodeinlẏ sche saugh a sighte queẏnte  
-ﬀor right anon on of þe fyres queẏnte  
-And quiked agaẏn and after þat anon  
+Whil Emelye was þus in hire preyer  
+But sodeinly sche saugh a sighte queynte  
+ﬀor right anon on of þe fyres queynte  
+And quiked agayn and after þat anon  
 That oþer fyr was queint and al a gon  
 And as it queinte it made a whistlinge  
