--- a/transcriptions/34v.md
+++ b/transcriptions/34v.md
@@ -6,19 +6,19 @@ author: Jenna Schoen
 - [x] Transcribed
 - [ ] Double checked
 
-And in þi temple I wil mẏ baner honge  
-And aỻ þe armes of mẏ companẏe  
-And eủemo vnto til þat daẏ I dẏe  
-Eterne fire I wol bẏfore þe fẏnde  
-And eek to þis avow I wil me bẏnde  
-Mẏ berd mẏn here þat hongreþ longe a doun  
+And in þi temple I wil my baner honge  
+And all þe armes of my companye  
+And eủemo vnto til þat day I dye  
+Eterne fire I wol byfore þe fynde  
+And eek to þis avow I wil me bynde  
+My berd myn here þat hongreþ longe a doun  
 That neuer ȝet ne felte offension̄  
 Of resour nor of schere I wil þe yiue  
 And ben þi trewe ẜuant whil I liue  
-Now lord haue rouþe vpon mẏ sorwes sore  
+Now lord haue rouþe vpon my sorwes sore  
 If me þe victorie I axe þe namore  
-¶ The preyer stẏnte of Arcita þe stronge  
-The rẏnges on the temple dore þat honge  
+¶ The preyer stynte of Arcita þe stronge  
+The rynges on the temple dore þat honge  
 And eek þe dores clateren ful faste  
 Of which arcita somwhat him agaste  
 þe fyres brenden vp þe auter bright  
@@ -29,16 +29,16 @@ And more encense in to þe fir he caste
 With oþre rites moo and atte laste  
 The statut of mars bigan his hauberk rynge  
 And with þe soun he herd a mormoringe  
-ﬀul lowe ⁊ dym þat seẏde þis victorie  
+ﬀul lowe ⁊ dym þat seyde þis victorie  
 ﬀor which he ȝaf to mars honour and glorie  
-And þus with ioẏe and hope wel to fare  
+And þus with ioye and hope wel to fare  
 Arcite anon vnto his Inne is fare  
-As faẏn as foul is of þe brighte sonne  
-And right anon such strif is bẏgonne  
-ﬀor þilke grauntẏng in þe heuen aboue  
+As fayn as foul is of þe brighte sonne  
+And right anon such strif is bygonne  
+ﬀor þilke grauntyng in þe heuen aboue  
 Bitwixe venus þe goddesse of loue  
 And Mars þe sterne god armipotent  
 That Iubiter was besy it to stent  
 Til þat þe pale Saturnus þe colde  
-That knew so manẏ of auentures olde  
+That knew so many of auentures olde  
 ﬀond in his olde exꝑience an arte  
