--- a/transcriptions/35v.md
+++ b/transcriptions/35v.md
@@ -7,38 +7,38 @@ author: Jenna Schoen
 - [ ] Double checked
 
 The grete eﬀect for which þat I bygan  
-Gret was þe feste in Athenes þat daẏ  
-And eek þat lustẏ sesoun of þat maẏ  
-Made euerẏ knight to ben in such plesance  
-That al þat mondaẏ ioustne þei and daunce  
+Gret was þe feste in Athenes þat day  
+And eek þat lusty sesoun of þat may  
+Made euery knight to ben in such plesance  
+That al þat monday ioustne þei and daunce  
 And spend in heigh venus seruise  
-But bẏ þe cause þat þai scholde rise  
-Erlẏ for to seen þe grete fight  
+But by þe cause þat þai scholde rise  
+Erly for to seen þe grete fight  
 vnto here reste wente þei at night  
-And on the morwe whan þat daẏ gan springe  
-Of hors and harneys noẏse and clateringe  
+And on the morwe whan þat day gan springe  
+Of hors and harneys noyse and clateringe  
 Ther was in hostelleries al aboute  
-And to þe paleẏs rood þer manẏ a route  
+And to þe paleys rood þer many a route  
 Of lordes vpon steedes and palfreys  
-Ther maẏstow seen diuisyng of harneẏs  
+Ther maystow seen diuisyng of harneys  
 So vncouth and so riche and wrought so wel  
-Of goldsmẏthrie of broudyng and of steel  
+Of goldsmythrie of broudyng and of steel  
 þe scheelde bright testeres and trappures  
 Gold hewen helmes hauberkes cote armures  
 lordes in paramentz on here courseres  
 knightes of Retenu and eek squieres  
-Naẏling þe speres and helmes boclyng  
-Gydẏng of scheldes wiþ laẏners lasẏng  
-There as neede is þei were noþing ẏdel   
+Nayling þe speres and helmes boclyng  
+Gydyng of scheldes wiþ layners lasyng  
+There as neede is þei were noþing ydel   
 The fomy steedes on þe goldene bridel  
 Gnawen and faste þe armureres also  
 Wiþ file and hamer priking to and fro  
-ẏomen on foote and comunes manẏ oon  
-Wiþ schorte staues þikke as þey maẏ gon  
-Pẏpes trompes nakers Clarioūs  
-That in þe bataille blowe bloodẏ sownes  
-The paleẏs ful of poeples vp and doun  
-here þre þere ten holdẏng here question̄  
-Dẏuẏnyng of þise Thebane knightes tuo  
+yomen on foote and comunes many oon  
+Wiþ schorte staues þikke as þey may gon  
+Pypes trompes nakers Clarioūs  
+That in þe bataille blowe bloody sownes  
+The paleys ful of poeples vp and doun  
+here þre þere ten holdyng here question̄  
+Dyuynyng of þise Thebane knightes tuo  
 Som seide þus som seide it schal be so  
 Som holden with him with þe blake berde   
