--- a/transcriptions/18r.md
+++ b/transcriptions/18r.md
@@ -6,8 +6,8 @@ date: June 2018
 - [X] Transcribed
 - [ ] Double checked
 
-To sleen himself he waẏteþ priuely  
-He seide allas þat daẏ þat I was born  
+To sleen himself he wayteþ priuely  
+He seide allas þat day þat I was born  
 Now is my prison̄ worse þan biforn  
 Now is me schape eternaly to dwelle  
 Nought in Purgatori but in helle  
@@ -16,29 +16,29 @@ Allas þat euer I knew Ꝑotheus
 I fetered in his prison̄ eueremo  
 Thanne hadde I ben in blisse and not in woo  
 Only þe sight of hire whom þat I serue  
-þougħ þat I neuer hire grace maẏ deserue  
-Wolde haue ẏ suﬀised right ẏnougħ for me  
+þough þat I neuer hire grace may deserue  
+Wolde haue y suﬀised right ynough for me  
 ¶ Oo deere Cosyn Palamon qd he  
 Thin is þe victorie of þis auenture  
-ﬀul blissefullẏ in prison̄ might þou dure  
-In p̉soun certes naẏ but paradys  
-Wel haþ fortune torned þe þe dẏs  
+ﬀul blissefully in prison̄ might þou dure  
+In p̉soun certes nay but paradys  
+Wel haþ fortune torned þe þe dys  
 That hast þe right of hire and I þabsence  
 ﬀor possible is syn þou hast hir p̔sence  
 And art a knight a worþi and an able  
-That bẏ som caas syn fortune is changeable  
-Thou maist somtyme to þi desir atteẏne  
-But I þat am exiled and bareẏne  
+That by som caas syn fortune is changeable  
+Thou maist somtyme to þi desir atteyne  
+But I þat am exiled and bareyne  
 Of alle grace and in so gret despeire  
-That þer nẏs erþe water fyr ne eyre  
+That þer nys erþe water fyr ne eyre  
 Ne creature þat of hem maked is  
-That maẏ me helpe or don confort in þis  
+That may me helpe or don confort in þis  
 Wel ought I sterue in wanhope and distresse  
-ﬀare wel my lif mẏ lust and mẏ gladnesse  
-Allas whẏ pleẏnen men so in comune  
+ﬀare wel my lif my lust and my gladnesse  
+Allas why pleynen men so in comune  
 On purueance of god or of fortune  
-That ȝiueth hem ful ofte in manẏ a gẏse  
-Wel bet þan þeẏ can hemself deuẏse  
+That ȝiueth hem ful ofte in many a gyse  
+Wel bet þan þey can hemself deuyse  
 Som man defineþ for to haue richesse  
 That cause is of his mordre or gret seknesse  
 And som wolde out of his prison̄ fain  
