--- a/transcriptions/19v.md
+++ b/transcriptions/19v.md
@@ -14,31 +14,31 @@ And venus sleeþ me on þat oþer syde
 And lat him in his prison̄ stille dwelle  
 And of Arcite forþ I wil ȝou telle  
 The somer passeþ and þe nightes longe  
-Encresceth double wise þe peẏnes stronge   
+Encresceth double wise þe peynes stronge   
 Boþe of þe louer and of þe prisoner   
-I not which haþ þe wofuller mẏster   
+I not which haþ þe wofuller myster   
 ﬀor schortly for to sein of Palamon  
 Ꝑpetuelly is dampned to prison  
 In cheynes and in fettres to þe ded  
 And arcite is exiled vp his hed  
 ﬀor euermore as out of þat contre  
-Ne neuer he ne schal his ladẏ se  
+Ne neuer he ne schal his lady se  
 ¶ yow louers aske I now þis question̄  
 Who haþ þe wors arcite or Palamon  
-That oon maẏ seen his ladẏ daẏ bẏ daẏ  
-But in prison̄ moot he duellen aẏ  
-That oþer wher him list maẏ ride or go  
-But seen his ladẏ schal he neuer mo  
+That oon may seen his lady day by day  
+But in prison̄ moot he duellen ay  
+That oþer wher him list may ride or go  
+But seen his lady schal he neuer mo  
 Now diuineth as ȝou list þat ȝe can  
 ﬀor I wol telle forth as I bigan  
 Whan that arcite to Thebes comen was  
-ﬀul ofte a daẏ he swelte and saide allas  
-ﬀor seen his ladẏ schal he neuere more  
+ﬀul ofte a day he swelte and saide allas  
+ﬀor seen his lady schal he neuere more  
 And schortly to concluden al his wo  
 So mochel sorwe hadde neuer creature  
-That is or schal whil þat þe world maẏ dure  
-His sleep. his mete. his drink is him bẏ raft  
-That lene he wex and drẏe as is a schaft  
-His ẏghen holwe and grislẏ to biholde  
-His hewe falwe and pale as aẏssche colde  
+That is or schal whil þat þe world may dure  
+His sleep. his mete. his drink is him by raft  
+That lene he wex and drye as is a schaft  
+His yghen holwe and grisly to biholde  
+His hewe falwe and pale as ayssche colde  
 And solitarie he was and euer allone  
