--- a/transcriptions/20r.md
+++ b/transcriptions/20r.md
@@ -6,28 +6,28 @@ date: June 2018
 - [X] Transcribed
 - [ ] Double checked
 
-And waẏlyng al þe night makẏng his mone  
+And waylyng al þe night makyng his mone  
 And if he herde song or instrument  
-Than wolde he weepe he mighte nougħt be stent  
+Than wolde he weepe he mighte nought be stent  
 So feble were his spiritȝ and he lowe  
 And chaunged so þat no man couþe knowe  
-His speche noþer his voẏs þough men it herde  
+His speche noþer his voys þough men it herde  
 And in his gere for al þe world he ferde  
-Not comly lyk to louers maladẏe  
+Not comly lyk to louers maladye  
 Of heres but raþer lik manye  
 Engendred of humõ malencolik  
 Biforn his celle fantstik  
-And schortlẏ torned was al vp and doun  
+And schortly torned was al vp and doun  
 Bothe habite and disposicion̄  
 Of him þis woful louere daun arcite  
-What scholde I aldaẏ of his woo endite  
+What scholde I alday of his woo endite  
 Whan he endured hadde a ȝeer or tuo  
-This cruel torment and þis peẏne and woo  
-At Thebes in his contre as I seẏde  
-vpon a night in sleep as he him leẏde  
+This cruel torment and þis peyne and woo  
+At Thebes in his contre as I seyde  
+vpon a night in sleep as he him leyde  
 him þoughte þat þe wengede god mercurie  
 Biforn him stood and bad him to be merie  
-his sleepẏ ȝerde in honde he bar vpright  
+his sleepy ȝerde in honde he bar vpright  
 An hatte he wered vppon his heeres bright  
 Arrayed was þis god as he took keepe  
 As he was whan þat argus took his sleepe  
@@ -37,7 +37,7 @@ And with þat word arcite wook and sterte
 Now trewely how sore þat me smerte  
 Quod he to Athenes right now wol I fare  
 Ne for þe drede of deþ schal I nought spare  
-To see mẏ ladẏ þat I loue and serue  
+To see my lady þat I loue and serue  
 In hire presence I ne recche nouȝt to sterue  
 And with þat word he caughte a gret mirour  
 And saugh þat chaunged was al his colour  
