--- a/transcriptions/20v.md
+++ b/transcriptions/20v.md
@@ -11,34 +11,34 @@ Than siþen his face was so disfigured
 Of maladie þe which he hadde endured  
 He mighte wel if þat he bar him lowe  
 lyue in Athenes euermore vnknowe  
-And seen his ladẏ wel neigħ daẏ bẏ daẏ  
-And right anon he changed his arraẏ  
+And seen his lady wel neigh day by day  
+And right anon he changed his array  
 And cladde him as a poure laborer  
 And al allone saf oonly a squier  
 That knew his priuete and al þe caas  
-Which was desgised pouerlẏ as he was  
-To Athenes is he gon þe nexte waẏ  
-And to þe contre he wente vpon a daẏ  
+Which was desgised pouerly as he was  
+To Athenes is he gon þe nexte way  
+And to þe contre he wente vpon a day  
 And atte gate he profred his seruise  
 To drugge and drawe what so men wol deuise  
 And schortly of þis matier for to sein  
 He fille in oﬀice with a chamburlein  
 The which þat was dwellyng with Emelye  
 ﬀor he was wys and sone couþe aspye  
-Of eủẏ ẜuant which þat serueþ here  
+Of eủy ẜuant which þat serueþ here  
 Wel couþe he hewen woode and water bere  
-ﬀor he was ẏong and mightẏ for þe nones  
+ﬀor he was yong and mighty for þe nones  
 And þerto he was strong and bigge of bones  
-To doon þat eny wight him can deuẏse  
-A ẏeer or tuo he was in þis seruise  
+To doon þat eny wight him can deuyse  
+A yeer or tuo he was in þis seruise  
 Page of þe chambre of Emelye þe brighte  
 And Philostrat he seyde þat he highte  
-¶ But half so wel bẏloued aman as he  
+¶ But half so wel byloued aman as he  
 Ne was þer neuer in court of his degre  
 He was so gentil of condicion̄  
 That þurgh out al al the court was his renon̄  
 Thei seide þat it were a charite  
 That Theseus wolde enhaunce his degre  
 And putten him in worschipful seruise  
-Ther þat he migħt his vertu excercise  
+Ther þat he might his vertu excercise  
 And þus wiþinne a while his name is spronge  
