--- a/transcriptions/21r.md
+++ b/transcriptions/21r.md
@@ -9,7 +9,7 @@ date: June 2018
 Boþe of his deedes and of his goode tonge  
 That Theseus haþ taken him so neere  
 That of his Chambre he made him a squiere  
-And gaf him golde to maẏntene his degre  
+And gaf him golde to mayntene his degre  
 And eek men brought him out of his contre  
 ﬀro ȝeer to ȝeer ful priuily his rente  
 But honestly and sleighly he it spente  
@@ -30,15 +30,15 @@ And eek þer to he is a prisoner
 Who couþe ryme in englissh ꝓpurly  
 His martirdom for soþe it am not I  
 Therfore I passe als lightly as I may  
-¶ It felle þat in þe seuenþe ȝer of maẏ  
+¶ It felle þat in þe seuenþe ȝer of may  
 The þridde night as olde bokes sein  
 That als þis storie telleth more plein  
-Were it bẏ auenture or destinee  
+Were it by auenture or destinee  
 As whan a þing is schape it schal be  
-That sone after þe mydnẏght Palamon  
-Bẏ helpyng of a frende brak prison̄  
-And fleþ þe cite faste as he maẏ goo  
+That sone after þe mydnyght Palamon  
+By helpyng of a frende brak prison̄  
+And fleþ þe cite faste as he may goo  
 ﬀor hadde yeue his gailler drinke soo  
-Of a clarre maad of a certeẏn wẏn  
+Of a clarre maad of a certeyn wyn  
 With nercotiks and opie of Thebes fyn  
 That al þat night þough þat men wolde him schake  
