--- a/transcriptions/31r.md
+++ b/transcriptions/31r.md
@@ -8,36 +8,36 @@ author: G. E. Saretto
 - [ ] Double checked
 
 Couered in cloth of gold diapred weel  
-Com ridẏng lyk þe god of armes mars  
+Com ridyng lyk þe god of armes mars  
 His cote armure was of cloþ of Tars  
 Couched with perles whit and round and grete  
 His sadel was of brent gold newe I bete  
-A mantelet vpon his schuldern̄ hangẏnge  
-Bret ful of Rubẏes reede as fyr sparclẏnge  
-His crispe her lik rẏnges was I ronne  
-And þat was ẏelow and glitering as þe sonne  
-His nose was highe his eyen bright Cẏtrẏn  
-His lippes rounde his colour was sanguẏn  
-A fewe frakenes in his face ẏ spreẏnd  
-Betwixe ẏelow and somdel blak ẏ meynd  
+A mantelet vpon his schuldern̄ hangynge  
+Bret ful of Rubyes reede as fyr sparclynge  
+His crispe her lik rynges was I ronne  
+And þat was yelow and glitering as þe sonne  
+His nose was highe his eyen bright Cytryn  
+His lippes rounde his colour was sanguyn  
+A fewe frakenes in his face y spreynd  
+Betwixe yelow and somdel blak y meynd  
 And as a leon̄ he his lokyng caste  
-Of fẏue and twentẏ ȝeer his age I caste  
+Of fyue and twenty ȝeer his age I caste  
 His berd was wel begonne for to springe  
-His voẏs was as a trompe thunderinge  
+His voys was as a trompe thunderinge  
 vpon his heed he wered a laurer grene  
-A garland freissche and lustẏ for to seene  
-vpon his hand he bar for his deduẏt  
-An Egle tame as enẏ lilie whit  
+A garland freissche and lusty for to seene  
+vpon his hand he bar for his deduyt  
+An Egle tame as eny lilie whit  
 And C. lordes hadde he with him þere  
-Aỻ armed saue here heedes in al here gere  
-ﬀul richelẏ in aỻ maner þinges  
-ﬀor trusteþ wel þat Dukes Erles kẏnges  
-Were gadred in þis noble companẏe  
+All armed saue here heedes in al here gere  
+ﬀul richely in all maner þinges  
+ﬀor trusteþ wel þat Dukes Erles kynges  
+Were gadred in þis noble companye  
 ﬀor loue and for encrees of chiualrie  
-aboute þis king þer ran on eủrẏ part  
-ﬀul manẏ a tame leon̄ and lepart  
-And in þis wise þise lordes aỻ and some  
-Ben on þe sonedaẏ to þe Cite come  
+aboute þis king þer ran on eủry part  
+ﬀul many a tame leon̄ and lepart  
+And in þis wise þise lordes all and some  
+Ben on þe soneday to þe Cite come  
 Aboute p̉me and in þe toun alighte  
 This Theseus þis Duk þis worþi knighte  
 Whan he hadde brought hem in to his Cite  
