--- a/transcriptions/33v.md
+++ b/transcriptions/33v.md
@@ -6,39 +6,39 @@ author: Jenna Schoen
 - [X] Transcribed
 - [ ] Double checked
 
-As don þese wete brondes in here brennẏnge  
+As don þese wete brondes in here brennynge  
 And at þe brondes ende out ran anon  
-As it were bloodẏ dropes manẏ on  
-ﬀor which so sore a gast was Emelẏe  
-That sche was ful nẏ mad and gan to crie  
+As it were bloody dropes many on  
+ﬀor which so sore a gast was Emelye  
+That sche was ful ny mad and gan to crie  
 ﬀor sch ne wiste what it signefied  
 But oonly for þe feer þus haþ sche cried  
 And weepe þat it was pite for to heere  
 And þer with al Diane gan appeere  
 With bowe in hand right as an hunteresse  
-And seyde doughter stynt þin heuẏnesse  
+And seyde doughter stynt þin heuynesse  
 Among þe goddes heigh it is affermed  
-And bẏ eterne word writen and confermed  
+And by eterne word writen and confermed  
 Thou schalt be wedded vnto oon of þo  
 þat han for þe so mochel care and wo  
-And vnto which of hem I maẏ not telle  
-ﬀar wel for I ne maẏ no lenger dwelle  
-The fyres which þat on mẏn auter breme  
+And vnto which of hem I may not telle  
+ﬀar wel for I ne may no lenger dwelle  
+The fyres which þat on myn auter breme  
 Schul þe declare ar þat ȝe gon henne  
 Thin auenture of loue as in þis caas  
 And wiþ þat word þe arwes in þe caas  
-Of þe goddesse clateren faste and rẏnge  
-And forþ sche wente and made a vanẏsschynge  
+Of þe goddesse clateren faste and rynge  
+And forþ sche wente and made a vanysschynge  
 ﬀor which þis Emelye astoned was  
 And seide what amonteþ þis allas  
 I putt me in þi ꝓteccion̄  
 Diane and in þi disposicion̄  
-And home sche goþ anon þe nexte weẏe  
-This is þeﬀecte þer nẏs namore to seẏe  
+And home sche goþ anon þe nexte weye  
+This is þeﬀecte þer nys namore to seye  
 The nexte hour of mars folwynge þis  
 Arcite vnto te temple walked is  
 Of fiers mars to don his sacrifise  
-Wiþ aỻ þe rites of his payen wise  
+Wiþ all þe rites of his payen wise  
 Wiþ pitous hert and heigh deuocion̄  
 Right þus to mars he seide his orison̄  
 O stronge god þat in þe regnes colde  
