--- a/transcriptions/35r.md
+++ b/transcriptions/35r.md
@@ -7,38 +7,38 @@ author: G. E. Saretto
 - [x] Transcribed
 - [ ] Double checked
 
-That he ful sone haþ plesed euerẏ parte  
-A soþ is seẏde elde haþ gret auantage  
+That he ful sone haþ plesed euery parte  
+A soþ is seyde elde haþ gret auantage  
 In eelde is boþe wisdom and vsage  
-Men maẏ þe olde at renne and nought a trede  
+Men may þe olde at renne and nought a trede  
 Saturne anoon to stynte strif and drede  
-Al be it þat it is agaẏn his kinde  
-Of aỻ þis strif he gan remedẏe fẏnde  
-Mẏ deere doughter Venus qd Saturne  
-Mẏ cours þat haþ so wide for to turne  
-Haþ more power þan wot anẏ man  
-Mẏn is þe drynclyng in þe see so wan  
-Mẏn is þe prison̄ in þe derke cote  
-Mẏn is þe strangle and hangẏng bẏ þe þrote  
+Al be it þat it is agayn his kinde  
+Of all þis strif he gan remedye fynde  
+My deere doughter Venus qd Saturne  
+My cours þat haþ so wide for to turne  
+Haþ more power þan wot any man  
+Myn is þe drynclyng in þe see so wan  
+Myn is þe prison̄ in þe derke cote  
+Myn is þe strangle and hangyng by þe þrote  
 The murmure and þe cherles rebellinge  
-The gronẏng and þe priue emp̉sonynge  
+The gronyng and þe priue emp̉sonynge  
 I do vengeance and plein correccion̄  
 Wil I dwelle in þe signe of þe leon̄  
-Mẏn is þe ruine of þe hihe halles  
-The fallẏng of þe toures and of þe walles  
-vpon þe mẏnour and þe Carpenter  
+Myn is þe ruine of þe hihe halles  
+The fallyng of þe toures and of þe walles  
+vpon þe mynour and þe Carpenter  
 I slough Sampson schakynge þe piler  
-And mẏne ben þe maladies colde  
+And myne ben þe maladies colde  
 þe derke tresons and þe castes olde  
 my lokyng is þe fader of pestilence  
 Now weep namore I schal don diligence  
 That Palamon þat is þin owne knight  
-Schal haue his ladẏ as þou him bihigħt  
+Schal haue his lady as þou him bihight  
 Though mars schal helpe his knight ȝet naþeles  
 Betwixe ȝow þer moot be som tyme pees  
-Aỻ be ȝe nougħt boþe of oo compexion̄  
-That causeþ aldaẏ swich diuision̄  
-I am þin aẏell redẏ ad þi wille  
+All be ȝe nought boþe of oo compexion̄  
+That causeþ alday swich diuision̄  
+I am þin ayell redy ad þi wille  
 Weepe now namore I wil þi lust fulfille  
 ¶ Now wol I stente of þe goddes aboue  
 Of mars and of venus goddesses of loue  
